<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools='http://schemas.android.com/tools'
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_arthemis"
            android:title="@string/menu_arthemis"/>

        <item
            android:id="@+id/nav_eudia"
            android:title="@string/menu_eudia"/>

        <item
            android:id="@+id/nav_luteran"
            android:title="@string/menu_luteran"/>

        <item
            android:id="@+id/nav_tortoyk"
            android:title="@string/menu_tortoyk"/>

        <item
            android:id="@+id/nav_enihc"
            android:title="@string/menu_enihc"/>

        <item
            android:id="@+id/nav_arthetine"
            android:title="@string/menu_arthetine"/>

        <item
            android:id="@+id/nav_bern_north"
            android:title="@string/menu_bern_north"/>

        <item
            android:id="@+id/nav_shushire"
            android:title="@string/menu_shushire"/>

        <item
            android:id="@+id/nav_rohendel"
            android:title="@string/menu_rohendel"/>

        <item
            android:id="@+id/nav_yorn"
            android:title="@string/menu_yorn"/>

        <item
            android:id="@+id/nav_faten"
            android:title="@string/menu_faten"/>

        <item
            android:id="@+id/nav_papunika_1"
            android:title="@string/menu_papunika_1"/>

        <item
            android:id="@+id/nav_papunika_2"
            android:title="@string/menu_papunika_2"/>

        <item
            android:id="@+id/nav_bern_south"
            android:title="@string/menu_bern_south"/>

        <item
            android:id="@+id/nav_guinea"
            android:title="@string/menu_guinea"/>

        <item
            android:id="@+id/nav_procyon"
            android:title="@string/menu_procyon"/>

        <item
            android:id="@+id/nav_islandheart"
            android:title="@string/menu_islandheart"/>

        <item
            android:id="@+id/nav_giantheart"
            android:title="@string/menu_giantheart"/>

        <item
            android:id="@+id/nav_artwork"
            android:title="@string/menu_artwork"/>

        <item
            android:id="@+id/nav_treasuremap"
            android:title="@string/menu_treasuremap"/>

        <item
            android:id="@+id/nav_int_potion"
            android:title="@string/menu_int_potion"/>

        <item
            android:id="@+id/nav_cour_potion"
            android:title="@string/menu_cour_potion"/>

        <item
            android:id="@+id/nav_charm_potion"
            android:title="@string/menu_charm_potion"/>

        <item
            android:id="@+id/nav_kind_potion"
            android:title="@string/menu_kind_potion"/>
    </group>

</menu>